POWR-84: Information content type

--- a/web/sites/default/config/search_api.index.content.yml
+++ b/web/sites/default/config/search_api.index.content.yml
@@ -26,6 +26,7 @@ field_settings:
           city_service: default
           building: default
           service_location: default
+          information: default
   label:
     label: Label
     property_path: aggregated_field
@@ -64,27 +65,6 @@ datasource_settings:
       default: true
       selected: {  }
 processor_settings:
-  add_url: {  }
-  aggregated_field: {  }
-  content_access:
-    weights:
-      preprocess_query: -10
-  html_filter:
-    fields:
-      - rendered
-      - label
-    title: true
-    alt: true
-    tags:
-      h1: 5
-      h2: 3
-      h3: 2
-      strong: 2
-      b: 2
-    weights:
-      preprocess_index: -10
-      preprocess_query: -9
-    all_fields: false
   ignorecase:
     fields:
       - rendered
@@ -93,7 +73,20 @@ processor_settings:
       preprocess_index: -9
       preprocess_query: -8
     all_fields: false
-  rendered_item: {  }
+  content_access:
+    weights:
+      preprocess_query: -10
+  tokenizer:
+    fields:
+      - rendered
+      - label
+    spaces: ''
+    overlap_cjk: 1
+    minimum_word_size: '3'
+    weights:
+      preprocess_index: -6
+      preprocess_query: -5
+    all_fields: false
   stopwords:
     fields:
       - rendered
@@ -138,17 +131,8 @@ processor_settings:
       preprocess_index: -5
       preprocess_query: -4
     all_fields: false
-  tokenizer:
-    fields:
-      - rendered
-      - label
-    spaces: ''
-    overlap_cjk: 1
-    minimum_word_size: '3'
-    weights:
-      preprocess_index: -6
-      preprocess_query: -5
-    all_fields: false
+  add_url: {  }
+  rendered_item: {  }
   transliteration:
     fields:
       - rendered
@@ -157,6 +141,23 @@ processor_settings:
       preprocess_index: -4
       preprocess_query: -3
     all_fields: false
+  html_filter:
+    fields:
+      - rendered
+      - label
+    title: true
+    alt: true
+    tags:
+      h1: 5
+      h2: 3
+      h3: 2
+      strong: 2
+      b: 2
+    weights:
+      preprocess_index: -10
+      preprocess_query: -9
+    all_fields: false
+  aggregated_field: {  }
 tracker_settings:
   default:
     indexing_order: fifo
