--- a/web/sites/default/config/views.view.search.yml
+++ b/web/sites/default/config/views.view.search.yml
@@ -80,6 +80,7 @@ display:
               city_service: default
               building: default
               service_location: default
+              information: default
       fields:
         rendered:
           table: search_api_index_content
