POWR-38 Tweak page headers, add missing homepage audience block, and term description to pages

--- a/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-3.yml
+++ b/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-3.yml
@@ -8,24 +8,14 @@ dependencies:
     - views.view.services_by_term
   module:
     - ctools
+    - ctools_block
     - panels
     - views
 id: taxonomy_term_page-panels_variant-3
-label: Audience
+label: Audiences
 variant: panels_variant
 variant_settings:
   blocks:
-    712b3555-980f-4a26-8807-5f95a8c4a7a3:
-      id: 'entity_view:taxonomy_term'
-      label: 'Entity view (Taxonomy term)'
-      provider: ctools
-      label_display: '0'
-      view_mode: default
-      region: top
-      weight: 0
-      uuid: 712b3555-980f-4a26-8807-5f95a8c4a7a3
-      context_mapping:
-        entity: taxonomy_term
     9b8f3c68-d2b8-40ac-8406-0b714e60e0f6:
       id: 'views_block:services_by_term-block_1'
       label: ''
@@ -48,13 +38,38 @@ variant_settings:
       weight: 0
       uuid: 38b66ac6-c491-4902-b71c-990d5f15c1f0
       context_mapping: {  }
+    f6c19af3-0875-49f0-900f-3695d9b18ae0:
+      id: page_title_block
+      label: 'Page title'
+      provider: core
+      label_display: '0'
+      region: top
+      weight: -1
+      uuid: f6c19af3-0875-49f0-900f-3695d9b18ae0
+      context_mapping: {  }
+    237c9545-e57f-42d9-baac-7cdc13718381:
+      id: 'entity_field:taxonomy_term:description'
+      label: Description
+      provider: ctools_block
+      label_display: '0'
+      formatter:
+        label: hidden
+        type: text_default
+        settings: {  }
+        third_party_settings: {  }
+        weight: 0
+      region: top
+      weight: 0
+      uuid: 237c9545-e57f-42d9-baac-7cdc13718381
+      context_mapping:
+        entity: taxonomy_term
   id: panels_variant
   uuid: 96b5ad4a-b6d6-4df4-ad5a-9efa3c9e3022
   label: null
   weight: 0
   layout: layout_threecol_33_34_33
   layout_settings: {  }
-  page_title: ''
+  page_title: '[term:name]'
   storage_type: page_manager
   storage_id: taxonomy_term_page-panels_variant-3
   builder: standard
