--- a/web/sites/default/config/page_manager.page_variant.frontpage-panels_variant-0.yml
+++ b/web/sites/default/config/page_manager.page_variant.frontpage-panels_variant-0.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - page_manager.page.frontpage
+    - views.view.audiences_homepage
     - views.view.community_actions
     - views.view.topics
   module:
@@ -33,8 +34,19 @@ variant_settings:
       views_label: ''
       items_per_page: none
       region: content
-      weight: 0
+      weight: 1
       uuid: a9d59952-4724-44eb-be56-8b0f734491d0
+      context_mapping: {  }
+    abe902fb-61a1-46e0-9c76-fe82863ad5aa:
+      id: 'views_block:audiences_homepage-block_1'
+      label: ''
+      provider: views
+      label_display: '0'
+      views_label: ''
+      items_per_page: none
+      region: content
+      weight: -1
+      uuid: abe902fb-61a1-46e0-9c76-fe82863ad5aa
       context_mapping: {  }
   id: panels_variant
   uuid: 1cbab72a-c89f-41e2-a24f-6b48487cc61d
