--- a/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-0.yml
+++ b/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-0.yml
@@ -8,6 +8,7 @@ dependencies:
     - views.view.services_by_term
   module:
     - ctools
+    - ctools_block
     - panels
     - views
 id: taxonomy_term_page-panels_variant-0
@@ -15,17 +16,6 @@ label: Topics
 variant: panels_variant
 variant_settings:
   blocks:
-    45b5980b-f676-4744-844b-8d008d80574c:
-      id: 'entity_view:taxonomy_term'
-      label: 'Entity view (Taxonomy term)'
-      provider: ctools
-      label_display: '0'
-      view_mode: default
-      region: top
-      weight: 0
-      uuid: 45b5980b-f676-4744-844b-8d008d80574c
-      context_mapping:
-        entity: taxonomy_term
     621e6c1f-427a-42bf-9b15-9c46ced6ca2a:
       id: 'views_block:services_by_term-block_1'
       label: ''
@@ -48,13 +38,38 @@ variant_settings:
       weight: 0
       uuid: 79c44e9c-966f-4ff4-8843-5dd407698ee0
       context_mapping: {  }
+    7b8b40bb-1115-4ac2-858d-e23f95deb52e:
+      id: page_title_block
+      label: 'Page title'
+      provider: core
+      label_display: '0'
+      region: top
+      weight: -1
+      uuid: 7b8b40bb-1115-4ac2-858d-e23f95deb52e
+      context_mapping: {  }
+    8b91f3d8-0579-43ae-9080-4ae482ef38d0:
+      id: 'entity_field:taxonomy_term:description'
+      label: Description
+      provider: ctools_block
+      label_display: '0'
+      formatter:
+        label: hidden
+        type: text_default
+        settings: {  }
+        third_party_settings: {  }
+        weight: 0
+      region: top
+      weight: 0
+      uuid: 8b91f3d8-0579-43ae-9080-4ae482ef38d0
+      context_mapping:
+        entity: taxonomy_term
   id: panels_variant
   uuid: 3cf0a205-d6ab-4233-ab72-a1166dbe4ff0
   label: null
   weight: 0
   layout: layout_threecol_33_34_33
   layout_settings: {  }
-  page_title: ''
+  page_title: '[term:name]'
   storage_type: page_manager
   storage_id: taxonomy_term_page-panels_variant-0
   builder: standard
