--- a/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-1.yml
+++ b/web/sites/default/config/page_manager.page_variant.taxonomy_term_page-panels_variant-1.yml
@@ -7,6 +7,7 @@ dependencies:
     - views.view.services_by_term
   module:
     - ctools
+    - ctools_block
     - panels
     - views
 id: taxonomy_term_page-panels_variant-1
@@ -14,17 +15,6 @@ label: 'Community actions'
 variant: panels_variant
 variant_settings:
   blocks:
-    b9437ba7-0801-485f-b020-b3f74213af25:
-      id: 'entity_view:taxonomy_term'
-      label: 'Entity view (Taxonomy term)'
-      provider: ctools
-      label_display: '0'
-      view_mode: default
-      region: content
-      weight: 0
-      uuid: b9437ba7-0801-485f-b020-b3f74213af25
-      context_mapping:
-        entity: taxonomy_term
     70144791-7e89-4ab4-87af-6e1fe6815b5b:
       id: 'views_block:services_by_term-block_1'
       label: ''
@@ -33,16 +23,41 @@ variant_settings:
       views_label: ''
       items_per_page: none
       region: content
-      weight: 0
+      weight: 1
       uuid: 70144791-7e89-4ab4-87af-6e1fe6815b5b
       context_mapping: {  }
+    1a8b59d5-7d73-443f-8e77-c8e13486b2b5:
+      id: page_title_block
+      label: 'Page title'
+      provider: core
+      label_display: '0'
+      region: content
+      weight: -1
+      uuid: 1a8b59d5-7d73-443f-8e77-c8e13486b2b5
+      context_mapping: {  }
+    deac8ca8-eb5c-42e7-88d9-3633b80865b7:
+      id: 'entity_field:taxonomy_term:description'
+      label: Description
+      provider: ctools_block
+      label_display: '0'
+      formatter:
+        label: hidden
+        type: text_default
+        settings: {  }
+        third_party_settings: {  }
+        weight: 0
+      region: content
+      weight: 0
+      uuid: deac8ca8-eb5c-42e7-88d9-3633b80865b7
+      context_mapping:
+        entity: taxonomy_term
   id: panels_variant
   uuid: 4ecf9df4-e70b-4456-9a3f-83742747544f
   label: null
   weight: 0
   layout: layout_onecol
   layout_settings: {  }
-  page_title: ''
+  page_title: '[term:name]'
   storage_type: page_manager
   storage_id: taxonomy_term_page-panels_variant-1
   builder: standard
