--- a/web/sites/all/modules/pdx/pdx.links.task.yml
+++ b/web/sites/all/modules/pdx/pdx.links.task.yml
@@ -1,6 +1,13 @@
-pdx.add_content:
+
+# How to get this to appear in the Group landing page local task tabs?
+# The base route is the same.
+
+# https://api.drupal.org/api/drupal/core%21lib%21Drupal%21Core%21Menu%21menu.api.php/group/menu/8.2.x
+# https://www.drupal.org/docs/8/api/menu-api/providing-module-defined-local-tasks
+
+group.add_content:
   title: '+ Add Content'
   base_route: 'entity.group.canonical'
-  route_name: 'entity.group_content.collection'
+  route_name: 'pdx.group_add_content'
   weight: 160
 
