Add information content type

--- a/web/sites/default/config/core.entity_form_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.information.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.information.field_in
+    - field.field.node.information.field_body
     - node.type.information
   module:
     - content_moderation
@@ -21,7 +21,7 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_in:
+  field_body:
     type: entity_reference_paragraphs
     weight: 121
     settings:
