--- a/web/sites/default/config/core.entity_view_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.information.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.information.field_in
+    - field.field.node.information.field_body
     - node.type.information
   module:
     - entity_reference_revisions
@@ -13,7 +13,7 @@ targetEntityType: node
 bundle: information
 mode: default
 content:
-  field_in:
+  field_body:
     type: entity_reference_revisions_entity_view
     weight: 101
     label: above
