--- a/web/sites/default/config/field.storage.paragraph.field_column_2.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_column_2.yml
@@ -1,20 +1,19 @@
-uuid: 3b8ccd1f-62c7-4d06-ab6a-eb417f93a816
+uuid: 1467caa2-f22a-4016-b4f3-a9165a9e9587
 langcode: en
 status: true
 dependencies:
   module:
     - entity_reference_revisions
-    - node
     - paragraphs
-id: node.field_in
-field_name: field_in
-entity_type: node
+id: paragraph.field_column_2
+field_name: field_column_2
+entity_type: paragraph
 type: entity_reference_revisions
 settings:
   target_type: paragraph
 module: entity_reference_revisions
 locked: false
-cardinality: -1
+cardinality: 1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
