--- a/web/sites/default/config/field.field.paragraph.3_columns.field_column_3_2.yml
+++ b/web/sites/default/config/field.field.paragraph.3_columns.field_column_3_2.yml
@@ -1,18 +1,18 @@
-uuid: 9075da61-afa8-448c-a73b-2311e747fe47
+uuid: 80522e23-457e-43b1-99c2-386c2814ae27
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_in
-    - node.type.information
+    - field.storage.paragraph.field_column_3_2
+    - paragraphs.paragraphs_type.3_columns
     - paragraphs.paragraphs_type.simple_text
   module:
     - entity_reference_revisions
-id: node.information.field_in
-field_name: field_in
-entity_type: node
-bundle: information
-label: 'Information Content'
+id: paragraph.3_columns.field_column_3_2
+field_name: field_column_3_2
+entity_type: paragraph
+bundle: 3_columns
+label: 'Column 3-2'
 description: ''
 required: true
 translatable: false
@@ -25,25 +25,31 @@ settings:
     target_bundles:
       simple_text: simple_text
     target_bundles_drag_drop:
-      email_button:
-        weight: 8
-        enabled: false
-      form_app_button:
-        weight: 9
-        enabled: false
-      location:
+      2_columns:
         weight: 10
         enabled: false
-      service_mode:
+      3_columns:
         weight: 11
         enabled: false
-      service_step:
+      email_button:
         weight: 12
+        enabled: false
+      form_app_button:
+        weight: 13
+        enabled: false
+      location:
+        weight: 14
+        enabled: false
+      service_mode:
+        weight: 15
+        enabled: false
+      service_step:
+        weight: 16
         enabled: false
       simple_text:
         enabled: true
-        weight: 13
+        weight: 17
       telephone_button:
-        weight: 14
+        weight: 18
         enabled: false
 field_type: entity_reference_revisions
