POWR-84 Add the columns field to information content type.

--- a/web/sites/default/config/field.field.node.information.field_body.yml
+++ b/web/sites/default/config/field.field.node.information.field_body.yml
@@ -5,8 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_body
     - node.type.information
-    - paragraphs.paragraphs_type.2_columns
-    - paragraphs.paragraphs_type.3_columns
+    - paragraphs.paragraphs_type.columns_1_to_3_
     - paragraphs.paragraphs_type.simple_text
   module:
     - entity_reference_revisions
@@ -15,7 +14,7 @@ field_name: field_body
 entity_type: node
 bundle: information
 label: Body
-description: ''
+description: 'In the body, you can add text, media or columns. Columns will layout content for the desktop side by side that gets staked in a mobile view.'
 required: true
 translatable: false
 default_value: {  }
@@ -25,25 +24,27 @@ settings:
   handler_settings:
     negate: 0
     target_bundles:
-      2_columns: 2_columns
-      3_columns: 3_columns
+      columns_1_to_3_: columns_1_to_3_
       simple_text: simple_text
     target_bundles_drag_drop:
       2_columns:
-        enabled: true
         weight: 10
+        enabled: false
       email_button:
         weight: 10
         enabled: false
       3_columns:
-        enabled: true
         weight: 11
+        enabled: false
       form_app_button:
         weight: 11
         enabled: false
       location:
         weight: 12
         enabled: false
+      columns_1_to_3_:
+        enabled: true
+        weight: 13
       service_mode:
         weight: 13
         enabled: false
