--- a/web/sites/default/config/field.field.paragraph.columns_1_to_3_.field_columns.yml
+++ b/web/sites/default/config/field.field.paragraph.columns_1_to_3_.field_columns.yml
@@ -1,20 +1,20 @@
-uuid: 80522e23-457e-43b1-99c2-386c2814ae27
+uuid: 5835c24a-87af-461d-b7da-c1a0641bc7cf
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_column_3_2
-    - paragraphs.paragraphs_type.3_columns
+    - field.storage.paragraph.field_columns
+    - paragraphs.paragraphs_type.columns_1_to_3_
     - paragraphs.paragraphs_type.simple_text
   module:
     - entity_reference_revisions
-id: paragraph.3_columns.field_column_3_2
-field_name: field_column_3_2
+id: paragraph.columns_1_to_3_.field_columns
+field_name: field_columns
 entity_type: paragraph
-bundle: 3_columns
-label: 'Column 3-2'
-description: ''
-required: true
+bundle: columns_1_to_3_
+label: Columns
+description: 'Add a section with up to 3 columns of content. (Used only in desktop layouts. Mobile layouts will stack these columns.)'
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
@@ -26,30 +26,33 @@ settings:
       simple_text: simple_text
     target_bundles_drag_drop:
       2_columns:
-        weight: 10
-        enabled: false
-      3_columns:
         weight: 11
         enabled: false
-      email_button:
+      3_columns:
         weight: 12
         enabled: false
-      form_app_button:
+      columns_1_to_3_:
         weight: 13
         enabled: false
-      location:
+      email_button:
         weight: 14
         enabled: false
-      service_mode:
+      form_app_button:
         weight: 15
         enabled: false
-      service_step:
+      location:
         weight: 16
+        enabled: false
+      service_mode:
+        weight: 17
+        enabled: false
+      service_step:
+        weight: 18
         enabled: false
       simple_text:
         enabled: true
-        weight: 17
+        weight: 19
       telephone_button:
-        weight: 18
+        weight: 20
         enabled: false
 field_type: entity_reference_revisions
