--- a/web/sites/default/config/core.entity_view_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.information.default.yml
@@ -7,7 +7,14 @@ dependencies:
     - node.type.information
   module:
     - entity_reference_revisions
+    - panelizer
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
 id: node.information.default
 targetEntityType: node
 bundle: information
@@ -15,15 +22,17 @@ mode: default
 content:
   field_body:
     type: entity_reference_revisions_entity_view
-    weight: 101
-    label: above
+    weight: 0
+    label: hidden
     settings:
       view_mode: default
       link: ''
     third_party_settings: {  }
     region: content
   links:
-    weight: 100
+    weight: 1
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   scheduled_publication: true
