--- a/web/sites/default/config/field.storage.paragraph.field_columns.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_columns.yml
@@ -1,19 +1,19 @@
-uuid: 1467caa2-f22a-4016-b4f3-a9165a9e9587
+uuid: 4a77f3d3-00f4-4311-a5a8-702d02deda2b
 langcode: en
 status: true
 dependencies:
   module:
     - entity_reference_revisions
     - paragraphs
-id: paragraph.field_column_2
-field_name: field_column_2
+id: paragraph.field_columns
+field_name: field_columns
 entity_type: paragraph
 type: entity_reference_revisions
 settings:
   target_type: paragraph
 module: entity_reference_revisions
 locked: false
-cardinality: 1
+cardinality: 3
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
