POWR-78 add twig templates and update configuration with latest updates.

--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
         "drupal/search_api_page": "^1.0",
         "drupal/search_api_solr": "1.x-dev",
         "drupal/textarea_widget_for_text": "^1.1",
+        "drupal/twig_tweak": "^2.0",
         "drupal/views_bootstrap": "^3.0",
         "drupal/views_bulk_operations": "^2.2",
         "drush/drush": "^8.0",
