--- a/web/sites/default/config/core.entity_view_display.paragraph.service_mode.default.yml
+++ b/web/sites/default/config/core.entity_view_display.paragraph.service_mode.default.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.service_mode.field_service_modes
-    - field.field.paragraph.service_mode.field_step
     - field.field.paragraph.service_mode.field_step_by_step_instructions
     - field.field.paragraph.service_mode.field_time_to_complete
     - paragraphs.paragraphs_type.service_mode
@@ -19,7 +18,7 @@ content:
     weight: 0
     label: hidden
     settings:
-      link: true
+      link: false
     third_party_settings: {  }
     type: entity_reference_label
     region: content
@@ -41,5 +40,4 @@ content:
     type: string
     region: content
 hidden:
-  field_step: true
   scheduled_publication: true
