--- a/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.default.yml
@@ -24,7 +24,7 @@ bundle: city_service
 mode: default
 content:
   field_audience:
-    weight: 105
+    weight: 3
     label: above
     settings:
       link: true
@@ -32,7 +32,7 @@ content:
     type: entity_reference_label
     region: content
   field_community_actions:
-    weight: 103
+    weight: 1
     label: hidden
     settings:
       link: true
@@ -41,7 +41,7 @@ content:
     region: content
   field_service_mode:
     type: entity_reference_revisions_entity_view
-    weight: 104
+    weight: 0
     label: hidden
     settings:
       view_mode: default
@@ -49,17 +49,13 @@ content:
     third_party_settings: {  }
     region: content
   field_topics:
-    weight: 102
+    weight: 2
     label: hidden
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  links:
-    weight: 100
-    region: content
-    settings: {  }
-    third_party_settings: {  }
 hidden:
+  links: true
   scheduled_publication: true
