--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -44,6 +44,7 @@ module:
   image_widget_crop: 0
   inline_entity_form: 0
   jsonapi: 0
+  kint: 0
   layout_discovery: 0
   lightning_api: 0
   lightning_contact_form: 0
@@ -99,6 +100,7 @@ module:
   textarea_widget_for_text: 0
   token: 0
   toolbar: 0
+  twig_tweak: 0
   user: 0
   video_embed_field: 0
   video_embed_media: 0
