POWR-84 Changed paragraph type Simple Text's label to Text

--- a/web/sites/default/config/paragraphs.paragraphs_type.simple_text.yml
+++ b/web/sites/default/config/paragraphs.paragraphs_type.simple_text.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: simple_text
-label: 'Simple text'
+label: Text
 icon_uuid: null
 description: 'Simple paragraph of text with a rich text editor with limited formatting capabilities.'
 behavior_plugins: {  }
