POWR-78 Small tweak to templates to make sure the time to complete does not print if empty.

--- a/web/sites/default/services.pantheon.preproduction.yml
+++ b/web/sites/default/services.pantheon.preproduction.yml
@@ -10,8 +10,8 @@
 # See 'default.services.yml' for information on useful settings to
 # put here.
 #
-parameters:
-  twig.config:
-    debug: true
-    auto_reload: true
-    cache: false
+# parameters:
+#   twig.config:
+#     debug: true
+#     auto_reload: true
+#     cache: false
