POWR-84 Add clear cache after multidev deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -211,7 +211,7 @@ behat_tests: &behat_tests
             #   terminus drush portlandor.$CIRCLE_BRANCH -- sql-sanitize -y
             # fi
             # Clear cache
-            # terminus drush portlandor.$CIRCLE_BRANCH -- cr
+            terminus drush portlandor.$CIRCLE_BRANCH -- cr
             # Import config files
             terminus drush portlandor.$CIRCLE_BRANCH -- cim -y      
           fi
