--- a/web/sites/default/config/block.block.stormy_local_actions.yml
+++ b/web/sites/default/config/block.block.stormy_local_actions.yml
@@ -2,6 +2,8 @@ uuid: 19079031-b700-4e12-997c-c8be1238bbcf
 langcode: en
 status: true
 dependencies:
+  module:
+    - system
   theme:
     - stormy
 _core:
@@ -17,4 +19,9 @@ settings:
   label: 'Primary admin actions'
   provider: core
   label_display: '0'
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: '/group/*/nodes'
+    negate: true
+    context_mapping: {  }
