POWR-165 - Updated Group view "Group nodes" to override and match previously created custom "Group content" view. Removed obsolete Group Content view.

--- a/web/sites/default/config/views.view.group_nodes.yml
+++ b/web/sites/default/config/views.view.group_nodes.yml
@@ -973,6 +973,10 @@ display:
           plugin_id: numeric
       display_extenders: {  }
       title: Content
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
     cache_metadata:
       max-age: 0
       contexts:
