--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,7 +178,8 @@ behat_tests: &behat_tests
             # Check site status
             # terminus drush portlandor.$CIRCLE_BRANCH -- status
             # The following two drush commands will fail without wait for a few seconds
-            sleep 30s
+            curl https://$CIRCLE_BRANCH-portlandor.lndo.site/
+            sleep 40s
             # Sanitize DB
             # if [[ $CIRCLE_BRANCH = "master" ]]; then
             #   echo "Deploying Master to DEV. Do not sanitize DB"
