Update test site url

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,7 +178,7 @@ behat_tests: &behat_tests
             # Check site status
             # terminus drush portlandor.$CIRCLE_BRANCH -- status
             # The following two drush commands will fail without wait for a few seconds
-            curl https://$CIRCLE_BRANCH-portlandor.lndo.site/
+            curl https://$CIRCLE_BRANCH-portlandor.pantheonsite.io/
             sleep 40s
             # Sanitize DB
             # if [[ $CIRCLE_BRANCH = "master" ]]; then
