Use remote:drush

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,9 +127,9 @@ behat_tests: &behat_tests
             # Sanitize DB
             # terminus drush portlandor.dev -- sql-sanitize -y
             # Clear cache
-            terminus drush portlandor.dev -- cr
+            terminus remote:drush portlandor.dev -- cr
             # Import config files
-            terminus drush portlandor.dev -- cim -y   
+            terminus remote:drush portlandor.dev -- cim -y   
             # After success deployment to DEV, remove the multidev site if this is a merge of a PR
             # Read the last Git log in the master branch. Get the branch name at the end of the log.
             # Example: Merge pull request #35 from eGovPDX/powr-152
@@ -189,9 +189,9 @@ behat_tests: &behat_tests
             #   terminus drush portlandor.$CIRCLE_BRANCH -- sql-sanitize -y
             # fi
             # Clear cache
-            terminus drush portlandor.$CIRCLE_BRANCH -- cr
+            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
             # Import config files
-            terminus drush portlandor.$CIRCLE_BRANCH -- cim -y      
+            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y      
           fi
     - save_cache: *save_cache
     - store_test_results:
