switch back to var/www

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,6 +92,7 @@ behat_tests: &behat_tests
         command: |
           export PATH=/tmp/vendor/bin:/var/www/html/vendor/bin:$PATH
           cd /tmp && curl -O https://raw.githubusercontent.com/pantheon-systems/terminus-installer/master/builds/installer.phar && php installer.phar install
+          cd /var/www/html
           # Make sure to log in
           # Set the user email that will commit code into Pantheon repo 
           terminus auth:login --machine-token="$eGov_Terminus" --email="$eGov_Email"
@@ -180,7 +181,7 @@ behat_tests: &behat_tests
             # terminus drush portlandor.$CIRCLE_BRANCH -- status
             # The following two drush commands will fail without wait for a few seconds
             curl https://$CIRCLE_BRANCH-portlandor.pantheonsite.io/
-            sleep 40s
+            # sleep 40s
             # Sanitize DB
             # if [[ $CIRCLE_BRANCH = "master" ]]; then
             #   echo "Deploying Master to DEV. Do not sanitize DB"
