--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,5 @@
 # CircleCI integration with Drupal 8.
 
-# Reusable steps.
-
 ## Copies .circle/Robofile to the repository root.
 copy_robo: &copy_robo
   run:
@@ -38,58 +36,12 @@ behat_tests: &behat_tests
     - *copy_robo
     - restore_cache: *restore_cache
     - run:
-        name: Composer Install
+        name: Deploy to Pantheon
+        when: on_success
         command: |
           # Remove any remaining dependencies. Install all packages form package.json 
           composer config --global --auth github-oauth.github.com "$COMPOSER_TOKEN"
           rm -rf vendor web/core web/vendor web/modules/contrib web/themes/contrib && composer install --no-interaction
-    - run:
-        name: Terminus Login
-        command: |
-          # composer config --global --auth github-oauth.github.com "$COMPOSER_TOKEN"
-          # The newer version of these two packages conflict with Terminus. Downgrade here. Install Terminus
-          # composer require nikic/php-parser:3.1.5 && composer require psy/psysh:^0.8 && composer require "pantheon-systems/terminus:^1.7" 
-          # Add vendor/bin to path 
-          # export PATH=/var/www/html/vendor/bin:$PATH
-          #terminus auth:login --machine-token="$eGov_Terminus"
-          # Verify terminus can be invoked
-          #terminus --version
-          # Create the Terminus plugins folder if it's not there 
-          #mkdir -p ~/.terminus/plugins
-          #composer create-project -n -d ~/.terminus/plugins pantheon-systems/terminus-build-tools-plugin:^1
-          #composer create-project -n -d ~/.terminus/plugins pantheon-systems/terminus-secrets-plugin:^1
-          # rm -rf /var/www/html/vendor/behat/* && composer require drupal/drupal-extension:^3.4 guzzlehttp/guzzle:^6.0@dev
-    - run:
-        name: Run Behat tests
-        command: |
-          # composer config --global --auth github-oauth.github.com "$COMPOSER_TOKEN"
-          # composer require behat/behat:^3.4 behat/mink:^1.7 behat/mink-extension:v2.2 behat/mink-selenium2-driver:^1.3 bex/behat-screenshot:^1.2 jcalderonzumba/mink-phantomjs-driver:~0.3.1
-          # composer remove behat/mink-browserkit-driver
-          pwd
-          # mkdir -p web/sites/default/files
-          # chmod 775 web/sites/default/files
-          # chown -R :www-data web/sites/default/files
-          # mkdir -p /root/tmp && chmod 777 /root/tmp && ls -l /root
-          # import DB
-          # rm -f dump.sql.gz
-          # export PATH=/var/www/html/vendor/bin:$PATH
-          # terminus auth:login --machine-token="$eGov_Terminus" --email="$eGov_Email"
-          # robo job:run-behat-tests
-          # terminus backup:create portlandor.dev --element=db
-          # terminus backup:get --to dump.sql.gz portlandor.dev --element=db
-          # gunzip -f dump.sql.gz
-          # cp -rf .circleci/config/settings.local.php web/sites/default/settings.local.php
-          # # unalias cp
-          # cd web
-          # drush sql-cli < ../dump.sql
-          # drush cim -y
-          # drush cr -y
-          # cd ..
-          # behat --verbose -c tests/behat.yml
-    - run:
-        name: Deploy to Pantheon
-        when: on_success
-        command: |
           export PATH=/tmp/vendor/bin:/var/www/html/vendor/bin:$PATH
           cd /tmp && curl -O https://raw.githubusercontent.com/pantheon-systems/terminus-installer/master/builds/installer.phar && php installer.phar install
           cd /var/www/html
@@ -154,7 +106,7 @@ behat_tests: &behat_tests
               # Cloning files and DB from TEST environment to the multidev environment
               terminus env:clone-content portlandor.test "$CIRCLE_BRANCH" -y 
             else
-              terminus multidev:create portlandor.test $CIRCLE_BRANCH
+              echo "Creating new multidev site. This may take a few seconds." && terminus multidev:create portlandor.test $CIRCLE_BRANCH
             fi
             # don't check the repo host key
             export GIT_SSH_COMMAND="ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
@@ -180,7 +132,6 @@ behat_tests: &behat_tests
             # Check site status
             # terminus drush portlandor.$CIRCLE_BRANCH -- status
             # The following two drush commands will fail without wait for a few seconds
-            curl https://$CIRCLE_BRANCH-portlandor.pantheonsite.io/
             # sleep 40s
             # Sanitize DB
             # if [[ $CIRCLE_BRANCH = "master" ]]; then
@@ -192,7 +143,8 @@ behat_tests: &behat_tests
             # Clear cache
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
             # Import config files
-            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y      
+            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
+            curl https://$CIRCLE_BRANCH-portlandor.pantheonsite.io/
           fi
     - save_cache: *save_cache
     - store_test_results:
