Use curl to check for Porland

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,7 +144,11 @@ behat_tests: &behat_tests
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
             # Import config files
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
-            curl https://$CIRCLE_BRANCH-portlandor.pantheonsite.io/
+            if curl -s https://$CIRCLE_BRANCH-portlandor.pantheonsite.io/ | grep "Portland Oregon" then
+              echo "Site up and running"
+            else
+              echo "Can't reach the site"
+            fi
           fi
     - save_cache: *save_cache
     - store_test_results:
