--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,7 +144,7 @@ behat_tests: &behat_tests
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
             # Import config files
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
-            if curl -s https://$CIRCLE_BRANCH-portlandor.pantheonsite.io/ | grep "Portland Oregon" then
+            if curl -s https://$CIRCLE_BRANCH-portlandor.pantheonsite.io/ | grep "Portland Oregon"; then
               echo "Site up and running"
             else
               echo "Can't reach the site"
