update curl test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,10 +144,12 @@ behat_tests: &behat_tests
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
             # Import config files
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
-            if curl -s https://$CIRCLE_BRANCH-portlandor.pantheonsite.io/ | grep "Portland Oregon"; then
+            curl https://$CIRCLE_BRANCH-portlandor.pantheonsite.io/ > homepage.html
+            if grep -Fxq "Portland Oregon" ./homepage.html; then
               echo "Site up and running"
             else
               echo "Can't reach the site"
+              exit 1;
             fi
           fi
     - save_cache: *save_cache
