--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,31 +123,16 @@ behat_tests: &behat_tests
             rm -rf ./vendor/drupal/coder/.git && rm -rf ./web/modules/contrib/facets/.git && rm -rf ./web/modules/contrib/search_api_solr/.git
             git add -f /var/www/html
             # Pantheon site will use the wrong DB if the local is kept
-            git rm --cache  web/sites/default/settings.local.php --ignore-unmatch
-            git rm -r --cache web/sites/default/files --ignore-unmatch
-            git commit -m "CircleCI deployment" --quiet
+            git rm --cache  web/sites/default/settings.local.php --ignore-unmatch && git rm -r --cache web/sites/default/files --ignore-unmatch && git commit -m "CircleCI deployment" --quiet
             # git filter-branch -f --index-filter 'git rm -rf --cached --ignore-unmatch sites/default/files' --prune-empty -- afc758c6..HEAD
             git push -f pantheon $CIRCLE_BRANCH
-            # Deploy code from local env to the new multidev site
-            # terminus env:deploy portlandor.$CIRCLE_BRANCH --sync-content --note="Manual deploy to powr-118"
             # Wake up the multidev site
             terminus env:wake portlandor.$CIRCLE_BRANCH
-            # Check site status
-            # terminus drush portlandor.$CIRCLE_BRANCH -- status
             # The following two drush commands will fail without wait for a few seconds
             # sleep 40s
-            # Sanitize DB
-            # if [[ $CIRCLE_BRANCH = "master" ]]; then
-            #   echo "Deploying Master to DEV. Do not sanitize DB"
-            # else
-            #   echo "Sanitize DB"
-            #   terminus drush portlandor.$CIRCLE_BRANCH -- sql-sanitize -y
-            # fi
-            # Clear cache
-            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
-            # Import config files
-            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
-            curl https://$CIRCLE_BRANCH-portlandor.pantheonsite.io/ > homepage.html
+            # Clear cache. Import config files
+            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
+            curl -s https://$CIRCLE_BRANCH-portlandor.pantheonsite.io/ > homepage.html
             if grep -Fxq "Portland Oregon" ./homepage.html; then
               echo "Site up and running"
             else
