--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,7 +133,7 @@ behat_tests: &behat_tests
             # Clear cache. Import config files
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
             curl -s https://$CIRCLE_BRANCH-portlandor.pantheonsite.io/ > homepage.html
-            if grep -Fxq "Portland Oregon" ./homepage.html; then
+            if grep -q "Portland Oregon" ./homepage.html; then
               echo "Site up and running"
             else
               echo "Can't reach the site"
