--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -132,8 +132,7 @@ behat_tests: &behat_tests
             # sleep 40s
             # Clear cache. Import config files
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
-            curl -s https://$CIRCLE_BRANCH-portlandor.pantheonsite.io/ > homepage.html
-            if grep -q "Portland Oregon" ./homepage.html; then
+            if curl -s https://$CIRCLE_BRANCH-portlandor.pantheonsite.io/ | grep -q "Portland Oregon"; then
               echo "Site up and running"
             else
               echo "Can't reach the site"
