--- a/web/sites/default/config/views.view.group_nodes.yml
+++ b/web/sites/default/config/views.view.group_nodes.yml
@@ -219,35 +219,35 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          batch: false
+          batch: true
           batch_size: 10
           form_step: true
-          buttons: false
-          clear_on_exposed: 0
+          buttons: true
+          clear_on_exposed: 1
           action_title: Action
           selected_actions:
-            node_assign_owner_action: 0
             node_unpromote_action: 0
-            node_promote_action: 0
+            node_unpublish_action: 0
             node_publish_action: 0
+            node_unpublish_by_keyword_action: 0
+            node_assign_owner_action: 0
+            node_promote_action: 0
             node_save_action: 0
             node_make_sticky_action: 0
-            node_unpublish_by_keyword_action: 0
-            node_unpublish_action: 0
             node_make_unsticky_action: 0
             views_bulk_operations_delete_entity: 0
             pathauto_update_alias: 0
-            'entity:delete_action:node': 'entity:delete_action:node'
-            'entity:publish_action:node': 'entity:publish_action:node'
             'entity:save_action:node': 0
             'entity:unpublish_action:node': 'entity:unpublish_action:node'
+            'entity:publish_action:node': 'entity:publish_action:node'
+            'entity:delete_action:node': 'entity:delete_action:node'
           preconfiguration:
-            'entity:delete_action:node':
-              label_override: 'Delete selected items'
-            'entity:publish_action:node':
-              label_override: 'Publish selected items'
             'entity:unpublish_action:node':
               label_override: 'Unpublish selected items'
+            'entity:publish_action:node':
+              label_override: 'Publish selected items'
+            'entity:delete_action:node':
+              label_override: 'Delete selected items'
           plugin_id: views_bulk_operations_bulk_form
         nid:
           id: nid
