--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -3,14 +3,14 @@ default:
     default:
       contexts:
         - FeatureContext
-        - Drupal\DrupalExtension\Context\DrupalContext
-        - Drupal\DrupalExtension\Context\MinkContext
-        - Drupal\DrupalExtension\Context\MessageContext
+        # - Drupal\DrupalExtension\Context\DrupalContext
+        # - Drupal\DrupalExtension\Context\MinkContext
+        # - Drupal\DrupalExtension\Context\MessageContext
   extensions:
     Behat\MinkExtension:
       goutte: ~
       selenium2: ~
-      base_url: http://localhost
+      base_url: https://powr-190-portlandor.pantheonsite.io
       sessions:
         default:
           goutte: ~
@@ -18,16 +18,16 @@ default:
           selenium2:
             browser: chrome
             wd_host: http://localhost:4444/wd/hub
-    Drupal\DrupalExtension:
-      blackbox: ~
-      api_driver: 'drupal'
-      drush:
-        alias: 'local'
-      drupal:
-        drupal_root: '/var/www/html/web'
-      region_map:
-        footer: "#footer"
-      selectors:
-        message_selector: '.messages'
-        error_message_selector: '.messages.messages--error'
-        success_message_selector: '.messages.messages--status'
+    # Drupal\DrupalExtension:
+    #   blackbox: ~
+    #   api_driver: 'drupal'
+    #   drush:
+    #     alias: 'local'
+    #   drupal:
+    #     drupal_root: '/var/www/html/web'
+    #   region_map:
+    #     footer: "#footer"
+    #   selectors:
+    #     message_selector: '.messages'
+    #     error_message_selector: '.messages.messages--error'
+    #     success_message_selector: '.messages.messages--status'
