--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,6 +139,12 @@ behat_tests: &behat_tests
               exit 1;
             fi
           fi
+    - run:
+        name: Test with Pantheon
+        when: on_success
+        command: |
+          composer require behat/behat:^3.4 behat/mink:^1.7 behat/mink-extension:v2.2 behat/mink-selenium2-driver:^1.3 bex/behat-screenshot:^1.2 jcalderonzumba/mink-phantomjs-driver:~0.3.1
+          behat -c tests/behat.yml
     - save_cache: *save_cache
     - store_test_results:
         path: /var/www/html/artifacts/behat
