--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "drupal/field_group": "^1.0",
         "drupal/group": "^1.0",
         "drupal/lightning_media": "~2.1",
+        "drupal/link_class": "^1.3",
         "drupal/page_manager": "^4.0@beta",
         "drupal/paragraphs": "^1.1",
         "drupal/prepopulate": "^2.0",
