Add selenium container

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ copy_robo: &copy_robo
 defaults: &defaults
   docker:
     - image: juampynr/drupal8ci:latest
+    - image: selenium/standalone-chrome-debug:3.7.1-beryllium
   working_directory: /var/www/html
 
 ## Defines the cache restoring mechanism.
