--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -132,13 +132,13 @@ behat_tests: &behat_tests
             # The following two drush commands will fail without wait for a few seconds
             # sleep 40s 
             # Clear cache. Import config files
-            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
-            if curl -s https://$CIRCLE_BRANCH-portlandor.pantheonsite.io/ | grep -q "Portland Oregon"; then
-              echo "Site up and running"
-            else
-              echo "Can't reach the site"
-              exit 1;
-            fi 
+            terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr && sleep 10s && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
+            # if curl -s https://$CIRCLE_BRANCH-portlandor.pantheonsite.io/ | grep -q "Portland Oregon"; then
+            #   echo "Site up and running"
+            # else
+            #   echo "Can't reach the site"
+            #   exit 1;
+            # fi 
           fi
     - run:
         name: Test with Pantheon
