--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,7 +133,7 @@ behat_tests: &behat_tests
             # sleep 40s 
             # Clear cache. Import config files
             terminus remote:drush portlandor.$CIRCLE_BRANCH -- cr
-            # sleep 10s && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
+            sleep 10s && terminus remote:drush portlandor.$CIRCLE_BRANCH -- cim -y
             # if curl -s https://$CIRCLE_BRANCH-portlandor.pantheonsite.io/ | grep -q "Portland Oregon"; then
             #   echo "Site up and running"
             # else
